ply/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_opt -> <empty>
Rule 4     instructions -> instructions instruction
Rule 5     instructions -> instruction
Rule 6     instruction -> statement ;
Rule 7     instruction -> IF ( condition ) instruction ELSE instruction
Rule 8     instruction -> IF ( condition ) instruction
Rule 9     instruction -> FOR ID ASSIGN expression : expression instruction
Rule 10    instruction -> WHILE ( condition ) instruction
Rule 11    instruction -> { instructions }
Rule 12    statement -> PRINT expression
Rule 13    statement -> RETURN expression
Rule 14    statement -> RETURN
Rule 15    statement -> CONTINUE
Rule 16    statement -> BREAK
Rule 17    statement -> variable ASSIGN expression
Rule 18    statement -> variable ADDASSIGN expression
Rule 19    statement -> variable SUBASSIGN expression
Rule 20    statement -> variable MULASSIGN expression
Rule 21    statement -> variable DIVASSIGN expression
Rule 22    condition -> expression EQ expression
Rule 23    condition -> expression GT expression
Rule 24    condition -> expression LT expression
Rule 25    condition -> expression GE expression
Rule 26    condition -> expression LE expression
Rule 27    condition -> expression NE expression
Rule 28    expression -> expression ADD expression
Rule 29    expression -> expression SUB expression
Rule 30    expression -> expression MUL expression
Rule 31    expression -> expression DIV expression
Rule 32    expression -> expression DOTADD expression
Rule 33    expression -> expression DOTSUB expression
Rule 34    expression -> expression DOTMUL expression
Rule 35    expression -> expression DOTDIV expression
Rule 36    expression -> SUB expression
Rule 37    expression -> expression TRANSPOSE
Rule 38    expression -> INTNUM
Rule 39    expression -> FLOATNUM
Rule 40    expression -> variable
Rule 41    variable -> ID
Rule 42    variable -> ID [ expression ]
Rule 43    variable -> ID [ expression , expression ]
Rule 44    expression -> STRING
Rule 45    expression -> matrix
Rule 46    expression -> vector
Rule 47    matrix -> ONES ( expression )
Rule 48    matrix -> ONES ( expression , expression )
Rule 49    matrix -> ZEROS ( expression )
Rule 50    matrix -> ZEROS ( expression , expression )
Rule 51    matrix -> EYE ( expression )
Rule 52    matrix -> EYE ( expression , expression )
Rule 53    matrix -> [ vectors ]
Rule 54    vectors -> vector , vector
Rule 55    vectors -> vectors , vector
Rule 56    vector -> [ expression ]
Rule 57    vector -> [ expressions ]
Rule 58    expressions -> expression , expression
Rule 59    expressions -> expressions , expression

Terminals, with rules where they appear

(                    : 7 8 10 47 48 49 50 51 52
)                    : 7 8 10 47 48 49 50 51 52
,                    : 43 48 50 52 54 55 58 59
:                    : 9
;                    : 6
ADD                  : 28
ADDASSIGN            : 18
ASSIGN               : 9 17
BREAK                : 16
COMMENT              : 
CONTINUE             : 15
DIV                  : 31
DIVASSIGN            : 21
DOTADD               : 32
DOTDIV               : 35
DOTMUL               : 34
DOTSUB               : 33
ELSE                 : 7
EQ                   : 22
EYE                  : 51 52
FLOATNUM             : 39
FOR                  : 9
GE                   : 25
GT                   : 23
ID                   : 9 41 42 43
IF                   : 7 8
INTNUM               : 38
LE                   : 26
LT                   : 24
MUL                  : 30
MULASSIGN            : 20
NE                   : 27
ONES                 : 47 48
PRINT                : 12
RETURN               : 13 14
STRING               : 44
SUB                  : 29 36
SUBASSIGN            : 19
TRANSPOSE            : 37
WHILE                : 10
ZEROS                : 49 50
[                    : 42 43 53 56 57
]                    : 42 43 53 56 57
error                : 
{                    : 11
}                    : 11

Nonterminals, with rules where they appear

condition            : 7 8 10
expression           : 9 9 12 13 17 18 19 20 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 37 42 43 43 47 48 48 49 50 50 51 52 52 56 58 58 59
expressions          : 57 59
instruction          : 4 5 7 7 8 9 10
instructions         : 2 4 11
instructions_opt     : 1
matrix               : 45
program              : 0
statement            : 6
variable             : 17 18 19 20 21 40
vector               : 46 54 54 55
vectors              : 53 55

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (3) instructions_opt -> .
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . statement ;
    (7) instruction -> . IF ( condition ) instruction ELSE instruction
    (8) instruction -> . IF ( condition ) instruction
    (9) instruction -> . FOR ID ASSIGN expression : expression instruction
    (10) instruction -> . WHILE ( condition ) instruction
    (11) instruction -> . { instructions }
    (12) statement -> . PRINT expression
    (13) statement -> . RETURN expression
    (14) statement -> . RETURN
    (15) statement -> . CONTINUE
    (16) statement -> . BREAK
    (17) statement -> . variable ASSIGN expression
    (18) statement -> . variable ADDASSIGN expression
    (19) statement -> . variable SUBASSIGN expression
    (20) statement -> . variable MULASSIGN expression
    (21) statement -> . variable DIVASSIGN expression
    (41) variable -> . ID
    (42) variable -> . ID [ expression ]
    (43) variable -> . ID [ expression , expression ]

    $end            reduce using rule 3 (instructions_opt -> .)
    IF              shift and go to state 6
    FOR             shift and go to state 7
    WHILE           shift and go to state 9
    {               shift and go to state 10
    PRINT           shift and go to state 11
    RETURN          shift and go to state 12
    CONTINUE        shift and go to state 13
    BREAK           shift and go to state 14
    ID              shift and go to state 8

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    statement                      shift and go to state 5
    variable                       shift and go to state 15

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (2) instructions_opt -> instructions .
    (4) instructions -> instructions . instruction
    (6) instruction -> . statement ;
    (7) instruction -> . IF ( condition ) instruction ELSE instruction
    (8) instruction -> . IF ( condition ) instruction
    (9) instruction -> . FOR ID ASSIGN expression : expression instruction
    (10) instruction -> . WHILE ( condition ) instruction
    (11) instruction -> . { instructions }
    (12) statement -> . PRINT expression
    (13) statement -> . RETURN expression
    (14) statement -> . RETURN
    (15) statement -> . CONTINUE
    (16) statement -> . BREAK
    (17) statement -> . variable ASSIGN expression
    (18) statement -> . variable ADDASSIGN expression
    (19) statement -> . variable SUBASSIGN expression
    (20) statement -> . variable MULASSIGN expression
    (21) statement -> . variable DIVASSIGN expression
    (41) variable -> . ID
    (42) variable -> . ID [ expression ]
    (43) variable -> . ID [ expression , expression ]

    $end            reduce using rule 2 (instructions_opt -> instructions .)
    IF              shift and go to state 6
    FOR             shift and go to state 7
    WHILE           shift and go to state 9
    {               shift and go to state 10
    PRINT           shift and go to state 11
    RETURN          shift and go to state 12
    CONTINUE        shift and go to state 13
    BREAK           shift and go to state 14
    ID              shift and go to state 8

    instruction                    shift and go to state 16
    statement                      shift and go to state 5
    variable                       shift and go to state 15

state 4

    (5) instructions -> instruction .

    IF              reduce using rule 5 (instructions -> instruction .)
    FOR             reduce using rule 5 (instructions -> instruction .)
    WHILE           reduce using rule 5 (instructions -> instruction .)
    {               reduce using rule 5 (instructions -> instruction .)
    PRINT           reduce using rule 5 (instructions -> instruction .)
    RETURN          reduce using rule 5 (instructions -> instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instruction .)
    BREAK           reduce using rule 5 (instructions -> instruction .)
    ID              reduce using rule 5 (instructions -> instruction .)
    $end            reduce using rule 5 (instructions -> instruction .)
    }               reduce using rule 5 (instructions -> instruction .)


state 5

    (6) instruction -> statement . ;

    ;               shift and go to state 17


state 6

    (7) instruction -> IF . ( condition ) instruction ELSE instruction
    (8) instruction -> IF . ( condition ) instruction

    (               shift and go to state 18


state 7

    (9) instruction -> FOR . ID ASSIGN expression : expression instruction

    ID              shift and go to state 19


state 8

    (41) variable -> ID .
    (42) variable -> ID . [ expression ]
    (43) variable -> ID . [ expression , expression ]

    ASSIGN          reduce using rule 41 (variable -> ID .)
    ADDASSIGN       reduce using rule 41 (variable -> ID .)
    SUBASSIGN       reduce using rule 41 (variable -> ID .)
    MULASSIGN       reduce using rule 41 (variable -> ID .)
    DIVASSIGN       reduce using rule 41 (variable -> ID .)
    ADD             reduce using rule 41 (variable -> ID .)
    SUB             reduce using rule 41 (variable -> ID .)
    MUL             reduce using rule 41 (variable -> ID .)
    DIV             reduce using rule 41 (variable -> ID .)
    DOTADD          reduce using rule 41 (variable -> ID .)
    DOTSUB          reduce using rule 41 (variable -> ID .)
    DOTMUL          reduce using rule 41 (variable -> ID .)
    DOTDIV          reduce using rule 41 (variable -> ID .)
    TRANSPOSE       reduce using rule 41 (variable -> ID .)
    ;               reduce using rule 41 (variable -> ID .)
    EQ              reduce using rule 41 (variable -> ID .)
    GT              reduce using rule 41 (variable -> ID .)
    LT              reduce using rule 41 (variable -> ID .)
    GE              reduce using rule 41 (variable -> ID .)
    LE              reduce using rule 41 (variable -> ID .)
    NE              reduce using rule 41 (variable -> ID .)
    ]               reduce using rule 41 (variable -> ID .)
    ,               reduce using rule 41 (variable -> ID .)
    :               reduce using rule 41 (variable -> ID .)
    )               reduce using rule 41 (variable -> ID .)
    IF              reduce using rule 41 (variable -> ID .)
    FOR             reduce using rule 41 (variable -> ID .)
    WHILE           reduce using rule 41 (variable -> ID .)
    {               reduce using rule 41 (variable -> ID .)
    PRINT           reduce using rule 41 (variable -> ID .)
    RETURN          reduce using rule 41 (variable -> ID .)
    CONTINUE        reduce using rule 41 (variable -> ID .)
    BREAK           reduce using rule 41 (variable -> ID .)
    ID              reduce using rule 41 (variable -> ID .)
    [               shift and go to state 20


state 9

    (10) instruction -> WHILE . ( condition ) instruction

    (               shift and go to state 21


state 10

    (11) instruction -> { . instructions }
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . statement ;
    (7) instruction -> . IF ( condition ) instruction ELSE instruction
    (8) instruction -> . IF ( condition ) instruction
    (9) instruction -> . FOR ID ASSIGN expression : expression instruction
    (10) instruction -> . WHILE ( condition ) instruction
    (11) instruction -> . { instructions }
    (12) statement -> . PRINT expression
    (13) statement -> . RETURN expression
    (14) statement -> . RETURN
    (15) statement -> . CONTINUE
    (16) statement -> . BREAK
    (17) statement -> . variable ASSIGN expression
    (18) statement -> . variable ADDASSIGN expression
    (19) statement -> . variable SUBASSIGN expression
    (20) statement -> . variable MULASSIGN expression
    (21) statement -> . variable DIVASSIGN expression
    (41) variable -> . ID
    (42) variable -> . ID [ expression ]
    (43) variable -> . ID [ expression , expression ]

    IF              shift and go to state 6
    FOR             shift and go to state 7
    WHILE           shift and go to state 9
    {               shift and go to state 10
    PRINT           shift and go to state 11
    RETURN          shift and go to state 12
    CONTINUE        shift and go to state 13
    BREAK           shift and go to state 14
    ID              shift and go to state 8

    instructions                   shift and go to state 22
    instruction                    shift and go to state 4
    statement                      shift and go to state 5
    variable                       shift and go to state 15

state 11

    (12) statement -> PRINT . expression
    (28) expression -> . expression ADD expression
    (29) expression -> . expression SUB expression
    (30) expression -> . expression MUL expression
    (31) expression -> . expression DIV expression
    (32) expression -> . expression DOTADD expression
    (33) expression -> . expression DOTSUB expression
    (34) expression -> . expression DOTMUL expression
    (35) expression -> . expression DOTDIV expression
    (36) expression -> . SUB expression
    (37) expression -> . expression TRANSPOSE
    (38) expression -> . INTNUM
    (39) expression -> . FLOATNUM
    (40) expression -> . variable
    (44) expression -> . STRING
    (45) expression -> . matrix
    (46) expression -> . vector
    (41) variable -> . ID
    (42) variable -> . ID [ expression ]
    (43) variable -> . ID [ expression , expression ]
    (47) matrix -> . ONES ( expression )
    (48) matrix -> . ONES ( expression , expression )
    (49) matrix -> . ZEROS ( expression )
    (50) matrix -> . ZEROS ( expression , expression )
    (51) matrix -> . EYE ( expression )
    (52) matrix -> . EYE ( expression , expression )
    (53) matrix -> . [ vectors ]
    (56) vector -> . [ expression ]
    (57) vector -> . [ expressions ]

    SUB             shift and go to state 24
    INTNUM          shift and go to state 25
    FLOATNUM        shift and go to state 26
    STRING          shift and go to state 28
    ID              shift and go to state 8
    ONES            shift and go to state 32
    ZEROS           shift and go to state 33
    EYE             shift and go to state 34
    [               shift and go to state 31

    expression                     shift and go to state 23
    variable                       shift and go to state 27
    matrix                         shift and go to state 29
    vector                         shift and go to state 30

state 12

    (13) statement -> RETURN . expression
    (14) statement -> RETURN .
    (28) expression -> . expression ADD expression
    (29) expression -> . expression SUB expression
    (30) expression -> . expression MUL expression
    (31) expression -> . expression DIV expression
    (32) expression -> . expression DOTADD expression
    (33) expression -> . expression DOTSUB expression
    (34) expression -> . expression DOTMUL expression
    (35) expression -> . expression DOTDIV expression
    (36) expression -> . SUB expression
    (37) expression -> . expression TRANSPOSE
    (38) expression -> . INTNUM
    (39) expression -> . FLOATNUM
    (40) expression -> . variable
    (44) expression -> . STRING
    (45) expression -> . matrix
    (46) expression -> . vector
    (41) variable -> . ID
    (42) variable -> . ID [ expression ]
    (43) variable -> . ID [ expression , expression ]
    (47) matrix -> . ONES ( expression )
    (48) matrix -> . ONES ( expression , expression )
    (49) matrix -> . ZEROS ( expression )
    (50) matrix -> . ZEROS ( expression , expression )
    (51) matrix -> . EYE ( expression )
    (52) matrix -> . EYE ( expression , expression )
    (53) matrix -> . [ vectors ]
    (56) vector -> . [ expression ]
    (57) vector -> . [ expressions ]

    ;               reduce using rule 14 (statement -> RETURN .)
    SUB             shift and go to state 24
    INTNUM          shift and go to state 25
    FLOATNUM        shift and go to state 26
    STRING          shift and go to state 28
    ID              shift and go to state 8
    ONES            shift and go to state 32
    ZEROS           shift and go to state 33
    EYE             shift and go to state 34
    [               shift and go to state 31

    expression                     shift and go to state 35
    variable                       shift and go to state 27
    matrix                         shift and go to state 29
    vector                         shift and go to state 30

state 13

    (15) statement -> CONTINUE .

    ;               reduce using rule 15 (statement -> CONTINUE .)


state 14

    (16) statement -> BREAK .

    ;               reduce using rule 16 (statement -> BREAK .)


state 15

    (17) statement -> variable . ASSIGN expression
    (18) statement -> variable . ADDASSIGN expression
    (19) statement -> variable . SUBASSIGN expression
    (20) statement -> variable . MULASSIGN expression
    (21) statement -> variable . DIVASSIGN expression

    ASSIGN          shift and go to state 36
    ADDASSIGN       shift and go to state 37
    SUBASSIGN       shift and go to state 38
    MULASSIGN       shift and go to state 39
    DIVASSIGN       shift and go to state 40


state 16

    (4) instructions -> instructions instruction .

    IF              reduce using rule 4 (instructions -> instructions instruction .)
    FOR             reduce using rule 4 (instructions -> instructions instruction .)
    WHILE           reduce using rule 4 (instructions -> instructions instruction .)
    {               reduce using rule 4 (instructions -> instructions instruction .)
    PRINT           reduce using rule 4 (instructions -> instructions instruction .)
    RETURN          reduce using rule 4 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instructions instruction .)
    BREAK           reduce using rule 4 (instructions -> instructions instruction .)
    ID              reduce using rule 4 (instructions -> instructions instruction .)
    $end            reduce using rule 4 (instructions -> instructions instruction .)
    }               reduce using rule 4 (instructions -> instructions instruction .)


state 17

    (6) instruction -> statement ; .

    IF              reduce using rule 6 (instruction -> statement ; .)
    FOR             reduce using rule 6 (instruction -> statement ; .)
    WHILE           reduce using rule 6 (instruction -> statement ; .)
    {               reduce using rule 6 (instruction -> statement ; .)
    PRINT           reduce using rule 6 (instruction -> statement ; .)
    RETURN          reduce using rule 6 (instruction -> statement ; .)
    CONTINUE        reduce using rule 6 (instruction -> statement ; .)
    BREAK           reduce using rule 6 (instruction -> statement ; .)
    ID              reduce using rule 6 (instruction -> statement ; .)
    $end            reduce using rule 6 (instruction -> statement ; .)
    }               reduce using rule 6 (instruction -> statement ; .)
    ELSE            reduce using rule 6 (instruction -> statement ; .)


state 18

    (7) instruction -> IF ( . condition ) instruction ELSE instruction
    (8) instruction -> IF ( . condition ) instruction
    (22) condition -> . expression EQ expression
    (23) condition -> . expression GT expression
    (24) condition -> . expression LT expression
    (25) condition -> . expression GE expression
    (26) condition -> . expression LE expression
    (27) condition -> . expression NE expression
    (28) expression -> . expression ADD expression
    (29) expression -> . expression SUB expression
    (30) expression -> . expression MUL expression
    (31) expression -> . expression DIV expression
    (32) expression -> . expression DOTADD expression
    (33) expression -> . expression DOTSUB expression
    (34) expression -> . expression DOTMUL expression
    (35) expression -> . expression DOTDIV expression
    (36) expression -> . SUB expression
    (37) expression -> . expression TRANSPOSE
    (38) expression -> . INTNUM
    (39) expression -> . FLOATNUM
    (40) expression -> . variable
    (44) expression -> . STRING
    (45) expression -> . matrix
    (46) expression -> . vector
    (41) variable -> . ID
    (42) variable -> . ID [ expression ]
    (43) variable -> . ID [ expression , expression ]
    (47) matrix -> . ONES ( expression )
    (48) matrix -> . ONES ( expression , expression )
    (49) matrix -> . ZEROS ( expression )
    (50) matrix -> . ZEROS ( expression , expression )
    (51) matrix -> . EYE ( expression )
    (52) matrix -> . EYE ( expression , expression )
    (53) matrix -> . [ vectors ]
    (56) vector -> . [ expression ]
    (57) vector -> . [ expressions ]

    SUB             shift and go to state 24
    INTNUM          shift and go to state 25
    FLOATNUM        shift and go to state 26
    STRING          shift and go to state 28
    ID              shift and go to state 8
    ONES            shift and go to state 32
    ZEROS           shift and go to state 33
    EYE             shift and go to state 34
    [               shift and go to state 31

    condition                      shift and go to state 41
    expression                     shift and go to state 42
    variable                       shift and go to state 27
    matrix                         shift and go to state 29
    vector                         shift and go to state 30

state 19

    (9) instruction -> FOR ID . ASSIGN expression : expression instruction

    ASSIGN          shift and go to state 43


state 20

    (42) variable -> ID [ . expression ]
    (43) variable -> ID [ . expression , expression ]
    (28) expression -> . expression ADD expression
    (29) expression -> . expression SUB expression
    (30) expression -> . expression MUL expression
    (31) expression -> . expression DIV expression
    (32) expression -> . expression DOTADD expression
    (33) expression -> . expression DOTSUB expression
    (34) expression -> . expression DOTMUL expression
    (35) expression -> . expression DOTDIV expression
    (36) expression -> . SUB expression
    (37) expression -> . expression TRANSPOSE
    (38) expression -> . INTNUM
    (39) expression -> . FLOATNUM
    (40) expression -> . variable
    (44) expression -> . STRING
    (45) expression -> . matrix
    (46) expression -> . vector
    (41) variable -> . ID
    (42) variable -> . ID [ expression ]
    (43) variable -> . ID [ expression , expression ]
    (47) matrix -> . ONES ( expression )
    (48) matrix -> . ONES ( expression , expression )
    (49) matrix -> . ZEROS ( expression )
    (50) matrix -> . ZEROS ( expression , expression )
    (51) matrix -> . EYE ( expression )
    (52) matrix -> . EYE ( expression , expression )
    (53) matrix -> . [ vectors ]
    (56) vector -> . [ expression ]
    (57) vector -> . [ expressions ]

    SUB             shift and go to state 24
    INTNUM          shift and go to state 25
    FLOATNUM        shift and go to state 26
    STRING          shift and go to state 28
    ID              shift and go to state 8
    ONES            shift and go to state 32
    ZEROS           shift and go to state 33
    EYE             shift and go to state 34
    [               shift and go to state 31

    expression                     shift and go to state 44
    variable                       shift and go to state 27
    matrix                         shift and go to state 29
    vector                         shift and go to state 30

state 21

    (10) instruction -> WHILE ( . condition ) instruction
    (22) condition -> . expression EQ expression
    (23) condition -> . expression GT expression
    (24) condition -> . expression LT expression
    (25) condition -> . expression GE expression
    (26) condition -> . expression LE expression
    (27) condition -> . expression NE expression
    (28) expression -> . expression ADD expression
    (29) expression -> . expression SUB expression
    (30) expression -> . expression MUL expression
    (31) expression -> . expression DIV expression
    (32) expression -> . expression DOTADD expression
    (33) expression -> . expression DOTSUB expression
    (34) expression -> . expression DOTMUL expression
    (35) expression -> . expression DOTDIV expression
    (36) expression -> . SUB expression
    (37) expression -> . expression TRANSPOSE
    (38) expression -> . INTNUM
    (39) expression -> . FLOATNUM
    (40) expression -> . variable
    (44) expression -> . STRING
    (45) expression -> . matrix
    (46) expression -> . vector
    (41) variable -> . ID
    (42) variable -> . ID [ expression ]
    (43) variable -> . ID [ expression , expression ]
    (47) matrix -> . ONES ( expression )
    (48) matrix -> . ONES ( expression , expression )
    (49) matrix -> . ZEROS ( expression )
    (50) matrix -> . ZEROS ( expression , expression )
    (51) matrix -> . EYE ( expression )
    (52) matrix -> . EYE ( expression , expression )
    (53) matrix -> . [ vectors ]
    (56) vector -> . [ expression ]
    (57) vector -> . [ expressions ]

    SUB             shift and go to state 24
    INTNUM          shift and go to state 25
    FLOATNUM        shift and go to state 26
    STRING          shift and go to state 28
    ID              shift and go to state 8
    ONES            shift and go to state 32
    ZEROS           shift and go to state 33
    EYE             shift and go to state 34
    [               shift and go to state 31

    condition                      shift and go to state 45
    expression                     shift and go to state 42
    variable                       shift and go to state 27
    matrix                         shift and go to state 29
    vector                         shift and go to state 30

state 22

    (11) instruction -> { instructions . }
    (4) instructions -> instructions . instruction
    (6) instruction -> . statement ;
    (7) instruction -> . IF ( condition ) instruction ELSE instruction
    (8) instruction -> . IF ( condition ) instruction
    (9) instruction -> . FOR ID ASSIGN expression : expression instruction
    (10) instruction -> . WHILE ( condition ) instruction
    (11) instruction -> . { instructions }
    (12) statement -> . PRINT expression
    (13) statement -> . RETURN expression
    (14) statement -> . RETURN
    (15) statement -> . CONTINUE
    (16) statement -> . BREAK
    (17) statement -> . variable ASSIGN expression
    (18) statement -> . variable ADDASSIGN expression
    (19) statement -> . variable SUBASSIGN expression
    (20) statement -> . variable MULASSIGN expression
    (21) statement -> . variable DIVASSIGN expression
    (41) variable -> . ID
    (42) variable -> . ID [ expression ]
    (43) variable -> . ID [ expression , expression ]

    }               shift and go to state 46
    IF              shift and go to state 6
    FOR             shift and go to state 7
    WHILE           shift and go to state 9
    {               shift and go to state 10
    PRINT           shift and go to state 11
    RETURN          shift and go to state 12
    CONTINUE        shift and go to state 13
    BREAK           shift and go to state 14
    ID              shift and go to state 8

    instruction                    shift and go to state 16
    statement                      shift and go to state 5
    variable                       shift and go to state 15

state 23

    (12) statement -> PRINT expression .
    (28) expression -> expression . ADD expression
    (29) expression -> expression . SUB expression
    (30) expression -> expression . MUL expression
    (31) expression -> expression . DIV expression
    (32) expression -> expression . DOTADD expression
    (33) expression -> expression . DOTSUB expression
    (34) expression -> expression . DOTMUL expression
    (35) expression -> expression . DOTDIV expression
    (37) expression -> expression . TRANSPOSE

    ;               reduce using rule 12 (statement -> PRINT expression .)
    ADD             shift and go to state 47
    SUB             shift and go to state 48
    MUL             shift and go to state 49
    DIV             shift and go to state 50
    DOTADD          shift and go to state 51
    DOTSUB          shift and go to state 52
    DOTMUL          shift and go to state 53
    DOTDIV          shift and go to state 54
    TRANSPOSE       shift and go to state 55


state 24

    (36) expression -> SUB . expression
    (28) expression -> . expression ADD expression
    (29) expression -> . expression SUB expression
    (30) expression -> . expression MUL expression
    (31) expression -> . expression DIV expression
    (32) expression -> . expression DOTADD expression
    (33) expression -> . expression DOTSUB expression
    (34) expression -> . expression DOTMUL expression
    (35) expression -> . expression DOTDIV expression
    (36) expression -> . SUB expression
    (37) expression -> . expression TRANSPOSE
    (38) expression -> . INTNUM
    (39) expression -> . FLOATNUM
    (40) expression -> . variable
    (44) expression -> . STRING
    (45) expression -> . matrix
    (46) expression -> . vector
    (41) variable -> . ID
    (42) variable -> . ID [ expression ]
    (43) variable -> . ID [ expression , expression ]
    (47) matrix -> . ONES ( expression )
    (48) matrix -> . ONES ( expression , expression )
    (49) matrix -> . ZEROS ( expression )
    (50) matrix -> . ZEROS ( expression , expression )
    (51) matrix -> . EYE ( expression )
    (52) matrix -> . EYE ( expression , expression )
    (53) matrix -> . [ vectors ]
    (56) vector -> . [ expression ]
    (57) vector -> . [ expressions ]

    SUB             shift and go to state 24
    INTNUM          shift and go to state 25
    FLOATNUM        shift and go to state 26
    STRING          shift and go to state 28
    ID              shift and go to state 8
    ONES            shift and go to state 32
    ZEROS           shift and go to state 33
    EYE             shift and go to state 34
    [               shift and go to state 31

    expression                     shift and go to state 56
    variable                       shift and go to state 27
    matrix                         shift and go to state 29
    vector                         shift and go to state 30

state 25

    (38) expression -> INTNUM .

    ADD             reduce using rule 38 (expression -> INTNUM .)
    SUB             reduce using rule 38 (expression -> INTNUM .)
    MUL             reduce using rule 38 (expression -> INTNUM .)
    DIV             reduce using rule 38 (expression -> INTNUM .)
    DOTADD          reduce using rule 38 (expression -> INTNUM .)
    DOTSUB          reduce using rule 38 (expression -> INTNUM .)
    DOTMUL          reduce using rule 38 (expression -> INTNUM .)
    DOTDIV          reduce using rule 38 (expression -> INTNUM .)
    TRANSPOSE       reduce using rule 38 (expression -> INTNUM .)
    ;               reduce using rule 38 (expression -> INTNUM .)
    EQ              reduce using rule 38 (expression -> INTNUM .)
    GT              reduce using rule 38 (expression -> INTNUM .)
    LT              reduce using rule 38 (expression -> INTNUM .)
    GE              reduce using rule 38 (expression -> INTNUM .)
    LE              reduce using rule 38 (expression -> INTNUM .)
    NE              reduce using rule 38 (expression -> INTNUM .)
    ]               reduce using rule 38 (expression -> INTNUM .)
    ,               reduce using rule 38 (expression -> INTNUM .)
    :               reduce using rule 38 (expression -> INTNUM .)
    )               reduce using rule 38 (expression -> INTNUM .)
    IF              reduce using rule 38 (expression -> INTNUM .)
    FOR             reduce using rule 38 (expression -> INTNUM .)
    WHILE           reduce using rule 38 (expression -> INTNUM .)
    {               reduce using rule 38 (expression -> INTNUM .)
    PRINT           reduce using rule 38 (expression -> INTNUM .)
    RETURN          reduce using rule 38 (expression -> INTNUM .)
    CONTINUE        reduce using rule 38 (expression -> INTNUM .)
    BREAK           reduce using rule 38 (expression -> INTNUM .)
    ID              reduce using rule 38 (expression -> INTNUM .)


state 26

    (39) expression -> FLOATNUM .

    ADD             reduce using rule 39 (expression -> FLOATNUM .)
    SUB             reduce using rule 39 (expression -> FLOATNUM .)
    MUL             reduce using rule 39 (expression -> FLOATNUM .)
    DIV             reduce using rule 39 (expression -> FLOATNUM .)
    DOTADD          reduce using rule 39 (expression -> FLOATNUM .)
    DOTSUB          reduce using rule 39 (expression -> FLOATNUM .)
    DOTMUL          reduce using rule 39 (expression -> FLOATNUM .)
    DOTDIV          reduce using rule 39 (expression -> FLOATNUM .)
    TRANSPOSE       reduce using rule 39 (expression -> FLOATNUM .)
    ;               reduce using rule 39 (expression -> FLOATNUM .)
    EQ              reduce using rule 39 (expression -> FLOATNUM .)
    GT              reduce using rule 39 (expression -> FLOATNUM .)
    LT              reduce using rule 39 (expression -> FLOATNUM .)
    GE              reduce using rule 39 (expression -> FLOATNUM .)
    LE              reduce using rule 39 (expression -> FLOATNUM .)
    NE              reduce using rule 39 (expression -> FLOATNUM .)
    ]               reduce using rule 39 (expression -> FLOATNUM .)
    ,               reduce using rule 39 (expression -> FLOATNUM .)
    :               reduce using rule 39 (expression -> FLOATNUM .)
    )               reduce using rule 39 (expression -> FLOATNUM .)
    IF              reduce using rule 39 (expression -> FLOATNUM .)
    FOR             reduce using rule 39 (expression -> FLOATNUM .)
    WHILE           reduce using rule 39 (expression -> FLOATNUM .)
    {               reduce using rule 39 (expression -> FLOATNUM .)
    PRINT           reduce using rule 39 (expression -> FLOATNUM .)
    RETURN          reduce using rule 39 (expression -> FLOATNUM .)
    CONTINUE        reduce using rule 39 (expression -> FLOATNUM .)
    BREAK           reduce using rule 39 (expression -> FLOATNUM .)
    ID              reduce using rule 39 (expression -> FLOATNUM .)


state 27

    (40) expression -> variable .

    ADD             reduce using rule 40 (expression -> variable .)
    SUB             reduce using rule 40 (expression -> variable .)
    MUL             reduce using rule 40 (expression -> variable .)
    DIV             reduce using rule 40 (expression -> variable .)
    DOTADD          reduce using rule 40 (expression -> variable .)
    DOTSUB          reduce using rule 40 (expression -> variable .)
    DOTMUL          reduce using rule 40 (expression -> variable .)
    DOTDIV          reduce using rule 40 (expression -> variable .)
    TRANSPOSE       reduce using rule 40 (expression -> variable .)
    ;               reduce using rule 40 (expression -> variable .)
    EQ              reduce using rule 40 (expression -> variable .)
    GT              reduce using rule 40 (expression -> variable .)
    LT              reduce using rule 40 (expression -> variable .)
    GE              reduce using rule 40 (expression -> variable .)
    LE              reduce using rule 40 (expression -> variable .)
    NE              reduce using rule 40 (expression -> variable .)
    ]               reduce using rule 40 (expression -> variable .)
    ,               reduce using rule 40 (expression -> variable .)
    :               reduce using rule 40 (expression -> variable .)
    )               reduce using rule 40 (expression -> variable .)
    IF              reduce using rule 40 (expression -> variable .)
    FOR             reduce using rule 40 (expression -> variable .)
    WHILE           reduce using rule 40 (expression -> variable .)
    {               reduce using rule 40 (expression -> variable .)
    PRINT           reduce using rule 40 (expression -> variable .)
    RETURN          reduce using rule 40 (expression -> variable .)
    CONTINUE        reduce using rule 40 (expression -> variable .)
    BREAK           reduce using rule 40 (expression -> variable .)
    ID              reduce using rule 40 (expression -> variable .)


state 28

    (44) expression -> STRING .
